templates/base_userdashboard: fix text overlap

--- a/adhocracy-plus/assets/scss/_utility.scss
+++ b/adhocracy-plus/assets/scss/_utility.scss
@@ -99,7 +99,11 @@
     word-break: break-all;
 }
 
-.u-break-word {
+.u-word-break {
+    word-break: break-word;
+}
+
+.u-overflow-word {
     overflow-wrap: break-word;
 }
 
